name:                spatial-reference
version:             0.1.0.1
synopsis:            Spatial reference types for use in GIS applications
description:         Please see README.md
homepage:            http://github.com/meteogrid/spatial-reference
license:             BSD3
license-file:        LICENSE
author:              Alberto Valverde González
maintainer:          alberto@toscat.net
copyright:           2016 Alberto Valverde González
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SpatialReference
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scientific
                     , text
                     , unordered-containers
                     , deepseq
                     , hashable
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fwarn-incomplete-patterns
                       -fwarn-incomplete-uni-patterns
                       -funbox-strict-fields
                       -O2


test-suite spatial-reference-test
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , hspec >= 1.10.0
                  , QuickCheck
                  , spatial-reference
                  , aeson
  hs-source-dirs:   test
  other-modules:    SpatialReferenceSpec
  main-is:          Spec.hs
  default-language: Haskell2010
  ghc-options:      -Wall -rtsopts

source-repository head
  type:     git
  location: https://github.com/meteogrid/spatial-reference
